1. Доделал тесты 2. Убрал проверку данных из Сервиса в другой пакет для упрощения написания тестов 3. Создал свой Exception